--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -4,18 +4,18 @@
     <table class="table table-striped">
       <thead>
         <tr>
-           <!--
+          <!--
             FELADAT!
             1. A következő 5 fejléc cellára állítsd be az
               onColumnSelect eseménykezelőt kattintás esetén.
             2. Minden metódusnak string-ként add át az oszlophoz
               tartozó kulcsot, pl.: 'id' vagy 'email'.
            -->
-           <th>#</th>
-           <th>Name</th>
-           <th>Email</th>
-           <th>Address</th>
-           <th>Active</th>
+          <th (click)="onColumnSelect(users.id)">#</th>
+          <th (click)="onColumnSelect(users.name)">Name</th>
+          <th (click)="onColumnSelect(users.email)">Email</th>
+          <th (click)="onColumnSelect(users.address)">Address</th>
+          <th (click)="onColumnSelect(users.active)">Active</th>
           <th>show</th>
         </tr>
       </thead>
@@ -26,7 +26,7 @@
           (függőleges vonallal kezdődik, az is kell):
              | filter:phraseString:'name' | sorter:columnKey
          -->
-         <tr *ngFor="let user of users">
+        <tr *ngFor="let user of users">
           <td>{{ user.id }}</td>
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
