--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -11,11 +11,11 @@
             2. Minden metódusnak string-ként add át az oszlophoz
               tartozó kulcsot, pl.: 'id' vagy 'email'.
            -->
-          <th (click)="onColumnSelect(users.id)">#</th>
-          <th (click)="onColumnSelect(users.name)">Name</th>
-          <th (click)="onColumnSelect(users.email)">Email</th>
-          <th (click)="onColumnSelect(users.address)">Address</th>
-          <th (click)="onColumnSelect(users.active)">Active</th>
+          <th (click)="onColumnSelect('id')">#</th>
+          <th (click)="onColumnSelect('name')">Name</th>
+          <th (click)="onColumnSelect('email')">Email</th>
+          <th (click)="onColumnSelect('address')">Address</th>
+          <th (click)="onColumnSelect('active')">Active</th>
           <th>show</th>
         </tr>
       </thead>
@@ -26,7 +26,7 @@
           (függőleges vonallal kezdődik, az is kell):
              | filter:phraseString:'name' | sorter:columnKey
          -->
-        <tr *ngFor="let user of users">
+        <tr *ngFor="let user of users | filter: phraseString: 'name' | sorter: columnKey">
           <td>{{ user.id }}</td>
           <td>{{ user.name }}</td>
           <td>{{ user.email }}</td>
